fix h1 size on iPhone

--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+@media all and (max-width: 400px) {
+  h1{
+    font-size: 32px;
+  }
+}
+
 div#name img{
   width: 200px;
   height: 132px;
